--- a/public/home.html
+++ b/public/home.html
@@ -1,12 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <link rel="stylesheet" href="index.css">
+  <link href='https://fonts.googleapis.com/css?family=Sen' rel='stylesheet'>
 </head>
+<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+<script src="/index.js"></script>
+
 <body>
-    <h1>Home</h1>
+    <div class="header">
+        <div class="left">
+          <a style ="padding:0" href="index.html"><img src=assets/Badger_Desktop.png width="150" height="59"></a>
+        </div>
+        <div class="right">
+          <a href="home.html">Home</a>
+          <a href="tech.html">Technology</a>
+          <a href="about.html">About</a>
+          <a href="contact.html">Contact</a>
+          <button class="button-header" onclick="location.href='account.html'">MY ACCOUNT</button>
+        </div>
+      </div>
+    
+      <div class="badges">
+        <img src=assets/Badger_Logo.png width="200" height="200">
+        <img src=assets/Badger_Logo.png width="200" height="200">
+        <img src=assets/Badger_Logo.png width="200" height="200">
+        <img src=assets/Badger_Logo.png width="200" height="200">
+        <img src=assets/Badger_Logo.png width="200" height="200">
+      </div>
+      <div class="badges-text">
+        Join events. Collect and trade NFT badges. <p>
+          <button class="button-gs" onclick="location.href='create-event.html'">GET STARTED</button>
+        </p>
+      </div>
 </body>
+
 </html>
