--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,31 @@
     <div class="left">
       <img src=assets/Badger_Desktop.png width="150" height="59">
     </div>
-  
-      
-      <a href="home"><h1>Badger</h1></a>
-      <a>Home</a>
-      <a>Home</a>
-      <a>Home</a>
-  
+    <div class="right">
+      <a href="home.html">Home</a>
+      <a href="tech.html">Technology</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+      <button class="button-header" onclick="location.href='login.html'">LOGIN</button>
+      <button class="button-header" onclick="location.href='signup.html'">SIGN UP</button>
+    </div>
+  </div>
+
+  <div class="badges">
+    <img src=assets/Badger_Logo.png width="200" height="200">
+    <img src=assets/Badger_Logo.png width="200" height="200">
+    <img src=assets/Badger_Logo.png width="200" height="200">
+    <img src=assets/Badger_Logo.png width="200" height="200">
+    <img src=assets/Badger_Logo.png width="200" height="200">
+  </div>
+  <div class="badges-text">
+    Join events. Collect and trade NFT badges. <p>
+      <button class="button-gs" onclick="location.href='create-event.html'">GET STARTED</button>
+    </p>
+  </div>
+  <div></div>
+  <div class="info-header">
+    How does it work?
   </div>
 </body>
 
