--- a/public/create-event.html
+++ b/public/create-event.html
@@ -2,6 +2,13 @@
 <html>
 
 <head>
+  <!-- Bootstrap CSS -->
+  <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+    crossorigin="anonymous"
+  />
   <link rel="stylesheet" href="index.css">
   <link href='https://fonts.googleapis.com/css?family=Sen' rel='stylesheet'>
 </head>
@@ -25,12 +32,32 @@
     <div class="creation-forms">
         <div class="event-creation">
           <form class="create-event">
-            <div class="form-title">Event Creation</div><br>
-            <label class="form-label" for="fname">Event Name</label><br>
-            <input class="form-input" type="text" id="name"><br>
-            <label class="form-label" for="lname">Description</label><br>
-            <textarea class="form-input" rows="5" id="desc"></textarea><br><br>
-            <input class="submit-btn" type="submit" value="Submit">
+            <div class="form-title">Event Creation</div>
+            <div>
+              <label class="form-label" for="ename">Event Name</label>
+              <input class="form-control form-text-field" type="text" id="name">
+            </div>
+            <div>
+              <label class="form-label" for="sdate">Start Date</label>
+              <input class="form-date-time" type="date">
+            </div>
+            <div>
+              <label class="form-label" for="stime">Start Time</label>
+              <input class="form-date-time" type="time">
+            </div>
+            <div>
+              <label class="form-label" for="edate">End Date</label>
+              <input class="form-date-time" type="date">
+            </div>
+            <div>
+              <label class="form-label" for="etime">End Time</label>
+              <input class="form-date-time" type="time">
+            </div>
+            <div>
+            <label class="form-label" for="description">Description</label>
+              <textarea class="form-control form-text-field" rows="5" id="desc"></textarea>
+            </div>
+            <input class="btn submit-btn" type="submit" value="Submit">
           </form>
         </div>
       </div>
