added location field

--- a/public/create-event.html
+++ b/public/create-event.html
@@ -54,6 +54,10 @@
               <input class="form-date-time" type="time">
             </div>
             <div>
+              <label class="form-label" for="address">Address</label>
+              <input class="form-control form-text-field" type="text" id="name">
+            </div>
+            <div>
             <label class="form-label" for="description">Description</label>
               <textarea class="form-control form-text-field" rows="5" id="desc"></textarea>
             </div>
