--- a/public/create-event.html
+++ b/public/create-event.html
@@ -62,6 +62,7 @@
               <textarea class="form-control form-text-field" rows="5" id="desc"></textarea>
             </div>
             <input class="btn submit-btn" type="submit" value="Submit">
+            <a id="go-to-link" href="create-badge.html">Continue to badge creation</a>
           </form>
         </div>
       </div>
