finalize create-badge.html

--- a/public/create-event.html
+++ b/public/create-event.html
@@ -35,7 +35,7 @@
             <div class="form-title">Event Creation</div>
             <div>
               <label class="form-label" for="ename">Event Name</label>
-              <input class="form-control form-text-field" type="text" id="name">
+              <input class="form-control form-text-field" type="text">
             </div>
             <div>
               <label class="form-label" for="sdate">Start Date</label>
@@ -55,13 +55,12 @@
             </div>
             <div>
               <label class="form-label" for="address">Address</label>
-              <input class="form-control form-text-field" type="text" id="name">
+              <input class="form-control form-text-field" type="text">
             </div>
             <div>
             <label class="form-label" for="description">Description</label>
-              <textarea class="form-control form-text-field" rows="5" id="desc"></textarea>
+              <textarea class="form-control form-text-field" rows="5" placeholder="Ex. Awarded to participants who demo their project at SheHacks "></textarea>
             </div>
-            <input class="btn submit-btn" type="submit" value="Submit">
             <a id="go-to-link" href="create-badge.html">Continue to badge creation</a>
           </form>
         </div>
