--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,11 @@
       <div class="side-panel">
         <h1 id="title">Hedera Chat Demo ⚡️</h1>
         <ul>
+          //REMOVE THIS
           <li><a class="panel-link" href="https://docs.hedera.com/"><img />Hedera JS Docs</a></li>
           <li><a class="panel-link"href="https://github.com/hashgraph/"><img />GitHub</a></li>
           <li><a class="panel-link" href="https://docs.hedera.com/"><img />Chat tutorial</a></li>
+
         </ul>
       </div>
       <div class="main-panel">
