--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <div class="content">
           <div class="header">
             <div class="chat-details">
-              <h3 id="topic-id"> </h3>
+              <h3 id="balance"> </h3>
               <h4 id="sequence-number"> </h4>
             </div>
           </div>
