added logo and fixing UI

--- a/public/index.html
+++ b/public/index.html
@@ -20,29 +20,20 @@
         <div class="content">
           <div class="header">
             <div class="chat-details">
-              <table>
-                <col>
-                <td>
-                  <img src="https://media.discordapp.net/attachments/944466943447019563/944751503787298886/logo_for_hedera.png?width=936&height=702" alt="logo"  class="logo"/>
-                </td>
-                <td>
-                  <h2 id="balance" ></h2>
-                  <h5 id="topic-id"></h5>
-                </td>
-              </table>
+
+              <img src="https://media.discordapp.net/attachments/944466943447019563/944751503787298886/logo_for_hedera.png?width=936&height=702" alt="logo"  class="logo"/>
+
+              <div style="align-self: center;">
+                <h2 id="balance" class="one"></h2>
+                <h5 id="topic-id" class="one"></h5>
+              </div>
+
             </div>
           </div>
           
-          <div>
-            <table>
-              <td>
+          <div class="productDetails">
                 <img src="https://cdn.discordapp.com/emojis/940807223624482826.webp?size=128&quality=lossless" class="productImage">
-              </td>
-              <td>
                 <section>Big paragraph</section>
-              </td>
-            </table>
-            
           </div>
 
 
