--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,10 @@
           <div class="productDetails">
                 <img src="https://cdn.discordapp.com/emojis/940807223624482826.webp?size=128&quality=lossless" class="productImage">
                 <section>Big paragraph</section>
+                <button type="button">Buy</button>
           </div>
 
+          
 
         </div>
       </div>
