--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
           </div>
           
           <div class="productDetails">
-                <img src="https://cdn.discordapp.com/emojis/940807223624482826.webp?size=128&quality=lossless" class="productImage">
+                <img src="https://media.discordapp.net/attachments/944466943447019563/944784024428228628/unknown.png" class="productImage">
                 <section>Big paragraph</section>
           </div>
 
