--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,9 @@
           <div class="productDetails">
                 <img src="https://media.discordapp.net/attachments/944466943447019563/944784024428228628/unknown.png" class="productImage">
                 <section>Big paragraph</section>
-                <button type="button">Buy</button>
           </div>
+
+          <button type="button" class="buttonB">Buy</button>
 
           
 
