Add server functionalities

--- a/public/chat.html
+++ b/public/chat.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Hello Hedera HCS chat!</title>
-    <link rel="stylesheet" href="/index.css"></link>
+    <link rel="stylesheet" href="/chat.css"></link>
   </head>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
