--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,15 @@
               <h3 id="topic-id"></h3>
               <h4 id="sequence-number"> </h4>
             </div>
+            
+            <div class="transfer-panel">
+              <form id="transfer-form" action="">
+                <input id="source-id" autocomplete="off" placeholder="Enter source account ID"/>
+                <input id="destination-id" autocomplete="off" placeholder="Enter destination account ID"/>
+                <input id="amount" autocomplete="off" placeholder="Enter amount to transfer in Tinybars"/>
+                <button alt="transfer"> </button>
+              </form>
+            </div>
           </div>
           <ul id="messages">
           </ul>
